--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="decrease_progress">-10%</string>
     <string name="jetpack">Jetpack</string>
     <string name="jetpack_livedata">Architecture Components: LiveData</string>
+    <string name="jetpack_room">Architecture Components: Room</string>
     <string name="generate_name">Generate Name</string>
     <string name="show_name">Show Name</string>
     <string name="animator_demo"><![CDATA[ValueAnimator & ObjectAnimator Demo]]></string>
@@ -33,4 +34,8 @@
     <string name="revert">Revert</string>
     <string name="start_with_animator">Start with Animator</string>
     <string name="camerax">CameraX</string>
+    <string name="add_word">Add word</string>
+    <string name="hint_word">Word...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
 </resources>
